o11y/configs/base/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-grafana-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - grafana.n5t.in
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-prometheus-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - prometheus.n5t.in
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
